--- a/index.html
+++ b/index.html
@@ -62,30 +62,71 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./images/our-works-1.jpg" alt="" /></li>
-          <li><img src="./images/our-works-2.jpg" alt="" /></li>
-          <li><img src="./images/our-works-3.jpg" alt="" /></li>
+          <li>
+            <img
+              src="./images/our-works-1.jpg"
+              alt="Наша робота"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/our-works-2.jpg"
+              alt="Наша робота"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/our-works-3.jpg"
+              alt="Наша робота"
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <a href="">
-          <img src="./images/team-1.jpg" alt="" />
+          <img
+            src="./images/team-1.jpg"
+            alt="Игорь Демьяненко"
+            width="270"
+            height="260"
+          />
           <h3>Игорь Демьяненко</h3>
           <p>Product Designer</p>
         </a>
         <a href="">
-          <img src="./images/team-2.jpg" alt="" />
+          <img
+            src="./images/team-2.jpg"
+            alt="Ольга Репина"
+            width="270"
+            height="260"
+          />
           <h3>Ольга Репина</h3>
           <p>Frontend Developer</p>
         </a>
         <a href="">
-          <img src="./images/team-3.jpg" alt="" />
+          <img
+            src="./images/team-3.jpg"
+            alt="Николай Тарасов"
+            width="270"
+            height="260"
+          />
           <h3>Николай Тарасов</h3>
           <p>Marketing</p>
         </a>
         <a href="">
-          <img src="./images/team-4.jpg" alt="" />
+          <img
+            src="./images/team-4.jpg"
+            alt="Михаил Ермаков"
+            width="270"
+            height="260"
+          />
           <h3>Михаил Ермаков</h3>
           <p>UI Designer</p>
         </a>
