--- a/index.html
+++ b/index.html
@@ -90,59 +90,70 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <a href="">
-          <img
-            src="./images/team-1.jpg"
-            alt="Игорь Демьяненко"
-            width="270"
-            height="260"
-          />
-          <h3>Игорь Демьяненко</h3>
-          <p>Product Designer</p>
-        </a>
-        <a href="">
-          <img
-            src="./images/team-2.jpg"
-            alt="Ольга Репина"
-            width="270"
-            height="260"
-          />
-          <h3>Ольга Репина</h3>
-          <p>Frontend Developer</p>
-        </a>
-        <a href="">
-          <img
-            src="./images/team-3.jpg"
-            alt="Николай Тарасов"
-            width="270"
-            height="260"
-          />
-          <h3>Николай Тарасов</h3>
-          <p>Marketing</p>
-        </a>
-        <a href="">
-          <img
-            src="./images/team-4.jpg"
-            alt="Михаил Ермаков"
-            width="270"
-            height="260"
-          />
-          <h3>Михаил Ермаков</h3>
-          <p>UI Designer</p>
-        </a>
+        <ul>
+          <li>
+            <img
+              src="./images/team-1.jpg"
+              alt="Игорь Демьяненко"
+              width="270"
+              height="260"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team-2.jpg"
+              alt="Ольга Репина"
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team-3.jpg"
+              alt="Николай Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team-4.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+              height="260"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
       <a href="">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <ul>
-        <li>
-          <a href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:++380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/5Rym82ZNxhVtMqkc9"
+              target="_blank"
+              rel="noopener noreferrer "
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:++380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
